--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
   <title>Gundhollinger Badesee – Gemeinde Mining</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/869/869869.png">
   <!-- Tailwind CSS & Inter Font -->
-  <script src="https://cdn.tailwindcss.com?plugins=typography,forms"></script>
+  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,container-queries"></script>
+  <!-- Inter Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet">
   <!-- Alpine.js -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
   <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <style>
-    .section-card { @apply bg-white/60 dark:bg-gray-800/60 backdrop-blur-lg rounded-2xl p-8 shadow-lg transition-transform hover:-translate-y-2; }
-    .btn-primary { @apply px-6 py-3 rounded-full font-semibold transition; }
-    .btn-primary-blue { @apply bg-emerald-500 text-white hover:bg-emerald-600; }
-    .btn-outline { @apply border border-white text-white hover:bg-white hover:text-gray-800; }
-  </style>
+  
 </head>
 <body :class="darkMode ? 'dark' : ''">
 <script>
@@ -41,7 +38,7 @@ function site(){return{
 </script>
 
 <!-- Navbar -->
-<nav class="sticky top-0 z-50 section-card backdrop-blur-lg">
+<nav class="sticky top-0 z-50 bg-white/60 dark:bg-gray-800/60 backdrop-blur-lg rounded-2xl p-4 shadow transition-transform hover:-translate-y-1">
   <div class="max-w-6xl mx-auto flex items-center justify-between py-4 px-6">
     <a href="#" class="text-2xl font-bold text-emerald-600 dark:text-emerald-300">🏖️ Badesee</a>
     <div class="hidden md:flex items-center space-x-6">
@@ -77,21 +74,21 @@ function site(){return{
 </nav>
 
 <!-- Hero -->
-<header class="relative h-screen section-card bg-cover bg-center" style="background-image:url('https://images.unsplash.com/photo-1627398242331-96d3ad1276f0');" data-aos="zoom-in">
+<header class="relative h-screen bg-cover bg-center bg-no-repeat bg-center bg-fixed rounded-2xl p-4 shadow transition-transform hover:-translate-y-1" style="background-image:url('https://images.unsplash.com/photo-1627398242331-96d3ad1276f0');" data-aos="zoom-in">
   <div class="absolute inset-0 bg-black/50"></div>
   <div class="relative z-10 flex flex-col items-center justify-center h-full text-center px-4">
     <h1 class="text-4xl md:text-6xl font-extrabold text-white mb-4 animate-fade-in-down">Sommerliche Auszeit am<br><span class="text-emerald-300">Gundhollinger Badesee</span></h1>
     <p class="text-lg text-gray-200 mb-6 animate-fade-in-up">Genieße Sonne, Spaß & Naturidylle in Mining.</p>
     <div class="space-x-4">
-      <a href="#badesee" class="btn-primary btn-primary-blue" data-aos="fade-right" data-aos-delay="200">Jetzt entdecken</a>
-      <a href="#map" class="btn-primary btn-outline" data-aos="fade-left" data-aos-delay="200">Besuchen</a>
+      <a href="#badesee" class="px-6 py-3 bg-emerald-500 text-white rounded-full font-semibold transition hover:bg-emerald-600" data-aos="fade-right" data-aos-delay="200">Jetzt entdecken</a>
+      <a href="#map" class="px-6 py-3 border border-white text-white rounded-full font-semibold transition hover:bg-white hover:text-gray-800" data-aos="fade-left" data-aos-delay="200">Besuchen</a>
     </div>
   </div>
 </header>
 
 <main class="max-w-5xl mx-auto py-16 space-y-20">
   <!-- Öffnungszeiten -->
-  <section id="badesee" class="section-card" data-aos="fade-up">
+  <section id="badesee" class="bg-white/60 dark:bg-gray-800/60 backdrop-blur-lg rounded-2xl p-8 shadow-lg transition-transform hover:-translate-y-2" data-aos="fade-up">
     <h2 class="text-3xl font-bold text-emerald-600 mb-4">🏖️ Öffnungszeiten & Preise</h2>
     <div class="grid md:grid-cols-2 gap-8">
       <div data-aos="fade-right">
