--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="de" class="scroll-smooth">
 <head>
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="DEIN_VERIFIZIERUNGSCODE" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gundhollinger Badesee – Gemeinde Mining</title>
