--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="de" class="scroll-smooth">
 <head>
   <!-- Google Search Console Verification -->
-  <meta name="google-site-verification" content="google23da05c8a32842b6.html" />
+  <!-- Haupt-Property -->
+  <meta name="google-site-verification" content="google23da05c8a32842b6" />
+  <!-- Zweite Property (optional) -->
+  <meta name="google-site-verification" content="zweiter_verifizierungscode" />
+  <!-- Ende der Verifizierungstags --> name="google-site-verification" content="google23da05c8a32842b6"" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gundhollinger Badesee – Gemeinde Mining</title>
