--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
   <meta name="google-site-verification" content="google23da05c8a32842b6" />
   <!-- Zweite Property (optional) -->
   <meta name="google-site-verification" content="zweiter_verifizierungscode" />
-  <!-- Ende der Verifizierungstags --> name="google-site-verification" content="google23da05c8a32842b6"" />
+  <!-- Ende der Verifizierungstags -->
+  <!-- JSON-LD LocalBusiness für Rich Snippet -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Gundhollinger Badesee",
+    "description": "Sommerliche Auszeit am Gundhollinger Badesee in Mining",
+    "url": "https://gundhollinger-badesee.com",
+    "telephone": "+4377237055",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Badstraße 2",
+      "addressLocality": "Gundholling",
+      "addressRegion": "Oberösterreich",
+      "postalCode": "4962",
+      "addressCountry": "AT"
+    },
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+        "opens": "08:00",
+        "closes": "21:00"
+      },
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+        "opens": "18:00",
+        "closes": "23:59",
+        "description": "Freier Eintritt ab 18 Uhr"
+      }
+    ],
+    "image": "https://i.imgur.com/mTge2vJ.png"
+  }
+  </script> name="google-site-verification" content="google23da05c8a32842b6"" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gundhollinger Badesee – Gemeinde Mining</title>
