--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <!-- Google Search Console Verification -->
   <!-- Haupt-Property -->
   <meta name="google-site-verification" content="google23da05c8a32842b6" />
-  <!-- Zweite Property (optional) -->
-  <meta name="google-site-verification" content="zweiter_verifizierungscode" />
+  <!-- Zweite Property (optional): Entfernen, wenn nicht benötigt -->
   <!-- Ende der Verifizierungstags -->
   <!-- JSON-LD LocalBusiness für Rich Snippet -->
   <script type="application/ld+json">
