--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="de" class="scroll-smooth">
 <head>
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="google23da05c8a32842b6" />
   <!-- Google Search Console Verification -->
   <!-- Haupt-Property -->
-  <meta name="google-site-verification" content="google23da05c8a32842b6" />
+  
   <!-- Zweite Property (optional): Entfernen, wenn nicht benötigt -->
   <!-- Ende der Verifizierungstags -->
   <!-- JSON-LD LocalBusiness für Rich Snippet -->
@@ -70,7 +72,7 @@
     .flip-card-back { transform: rotateY(180deg); }
   </style>
 </head>
-<body x-data="{ mobileMenuOpen:false, darkMode:false }" :class="{ 'dark':darkMode }" class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 transition-colors duration-300">
+<body x-data="{ mobileMenuOpen: false, darkMode: false }" :class="{ 'dark': darkMode }" class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100 transition-colors duration-300">
 
   <!-- Progress Bar -->
   <div id="progressBar"></div>
