--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gundhollinger Badesee – Gemeinde Mining</title>
-  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/869/869869.png">
+  <link rel="icon" href="4444.png" />>
   <!-- Tailwind CSS v3 -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Alpine.js für Interaktivität -->
