--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="google23da05c8a32842b6" />
-  <!-- Google Search Console Verification -->
-  <!-- Haupt-Property -->
-  
-  <!-- Zweite Property (optional): Entfernen, wenn nicht benötigt -->
-  <!-- Ende der Verifizierungstags -->
-  <!-- JSON-LD LocalBusiness für Rich Snippet -->
+  <!-- Required Meta Tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Title and Favicon -->
+  <title>Gundhollinger Badesee – Gemeinde Mining</title>
+  <link rel="icon" href="4444.png" />
+  <!-- Hydration and Styling -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <!-- AOS für Scroll-Animationen -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <!-- JSON-LD LocalBusiness -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -42,17 +48,7 @@
     ],
     "image": "https://i.imgur.com/mTge2vJ.png"
   }
-  </script> name="google-site-verification" content="google23da05c8a32842b6"" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gundhollinger Badesee – Gemeinde Mining</title>
-  <link rel="icon" href="4444.png" />>
-  <!-- Tailwind CSS v3 -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Alpine.js für Interaktivität -->
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  <!-- AOS für Scroll-Animationen -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  </script>
   <style>
     /* Scrollbar */
     ::-webkit-scrollbar { width: 8px; }
